// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should contain target="_blank" when openNewTab is set true 1`] = `
<scale-link href="http://example.com" open-new-tab="true">
  <mock:shadow-root>
    <a aria-disabled="false" class="link" href="http://example.com" part="base" target="_self">
      <span class="link__wrapper" part="wrapper">
        <slot></slot>
        <slot name="icon"></slot>
      </span>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should handle disabled link 1`] = `
<scale-link disabled="true" href="http://example.com">
  <mock:shadow-root>
    <a aria-disabled="true" class="link link--disabled" href="javascript:void(0)" part="base disabled">
      <span class="link__wrapper" part="wrapper">
        <slot></slot>
        <slot name="icon"></slot>
      </span>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should handle setted styles 1`] = `
<scale-link href="http://example.com" styles="color:red">
  <mock:shadow-root>
    <style>
      color:red
    </style>
    <a aria-disabled="false" class="link" href="http://example.com" part="base" target="_self">
      <span class="link__wrapper" part="wrapper">
        <slot></slot>
        <slot name="icon"></slot>
      </span>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should have link href value when href value is set 1`] = `
<scale-link href="http://example.com">
  <mock:shadow-root>
    <a aria-disabled="false" class="link" href="http://example.com" part="base" target="_self">
      <span class="link__wrapper" part="wrapper">
        <slot></slot>
        <slot name="icon"></slot>
      </span>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should match snapshot 1`] = `
<scale-link>
  <mock:shadow-root>
    <a aria-disabled="false" class="link" part="base" target="_self">
      <span class="link__wrapper" part="wrapper">
        <slot></slot>
        <slot name="icon"></slot>
      </span>
    </a>
  </mock:shadow-root>
  default
</scale-link>
`;
